# poli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  datamodel.drawio  pyproject.toml  rxconfig.py
backend/: run_api.py
backend/configs/: categories.yml  database.py
dbt/: .user.yml  _sources.yml  dbt_project.yml  profiles.yml
dbt/models/app/: app_par_session_polls.sql  app_votes.sql
dbt/models/intermediary/: int_parliament_members.sql
dbt/models/staging/: _sources.yml  stg_actor_types.sql  stg_actors.sql  stg_actors.yml  stg_case.sql  stg_case_category.sql  stg_case_status.sql  stg_case_step.sql  stg_case_step_status.sql  stg_case_step_type.sql  stg_case_type.sql  stg_meeting.sql  stg_meeting_type.sql  stg_poll.sql  stg_poll_type.sql  stg_poll_types.sql  stg_polls.sql  stg_vote.sql  stg_vote_type.sql
dbt/models/staging/actors/: _actors__sources.yml  stg_actor_actor.sql  stg_actor_actor_role.sql  stg_actor_types.sql
dbt/models/staging/cases/: _cases__source.yml  stg_case_status.sql  stg_case_step_type.sql
dbt/models/staging/meeting/: _meeting__sources.yml  stg_meeting_status.sql
dbt/models/staging/polls_votes/: _polls_votes__sources.yml  stg_vote.sql
dbt/models/staging/relations/: _relations__sources.yml  (+1 more)
dlt_pipelines/: ingest_dlt.py  pipelines.py  sources.py
exploration/: classification_labelling_export.py  party_vote_extractions.ipynb  zeroshot_classifier.ipynb
src/: ingest_dlt.py  pipelines.py  sources.py
src/ft_dk_pipeline/: state.json
transform_scripts/: classifier.py
utils/: categorization_utils.py
webapp/: webapp.py
